Replace new Integer(x) by Integer.valueOf(x).